--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1 style="color: rgb(255, 0, 0);">唯一网站：geji.eu.org</h1>
+    <h1 style="color: rgb(255, 0, 0);">有新的问题可联系本人收录</h1>
 
     <div id="knows">
         <h2>科普</h2>
@@ -166,8 +167,12 @@
     <div id="faq">
         <h2>问题/故障</h2>
 
-        <a href="./html/bulescreen.html">
+        <a href="./html/bulescreen.html" target="_blank">
             <input type="button" id="but" value="蓝屏">
+        </a>
+
+        <a href="./html/internet.html" target="_blank" rel="noopener noreferrer">
+            <input type="button" id="but" value="网络问题">
         </a>
     </div>
 </body>
