--- a/index.html
+++ b/index.html
@@ -162,6 +162,10 @@
         <a href="https://store.steampowered.com/app/223850/3DMark/" target="_blank" rel="noopener noreferrer">
             <input type="button" id="but2" value="3DMark（Steam国内无法打开）">
         </a>
+
+        <div>
+            <h3>- 重装解决99%的问题，重买解决100%的问题</h3>
+        </div>
     </div>
 
     <div id="faq">
@@ -173,6 +177,34 @@
 
         <a href="./html/internet.html" target="_blank" rel="noopener noreferrer">
             <input type="button" id="but" value="网络问题">
+        </a>
+    </div>
+
+    <div id="up">
+        <h2>电脑区UP主推荐</h2>
+
+        <a href="https://space.bilibili.com/25876945" target="_blank" rel="noopener noreferrer">
+            <input type="button" id="but" value="极客湾">
+        </a>
+
+        <a href="https://space.bilibili.com/35359510" target="_blank" rel="noopener noreferrer">
+            <input type="button" id="but" value="装机猿">
+        </a>
+
+        <a href="https://space.bilibili.com/348687356" target="_blank" rel="noopener noreferrer">
+            <input type="button" id="but" value="佳乐">
+        </a>
+
+        <a href="https://space.bilibili.com/10805707" target="_blank" rel="noopener noreferrer">
+            <input type="button" id="but" value="lclyjj">
+        </a>
+
+        <a href="https://space.bilibili.com/178429408" target="_blank" rel="noopener noreferrer">
+            <input type="button" id="but" value="老弟一号">
+        </a>
+
+        <a href="https://space.bilibili.com/9321359" target="_blank" rel="noopener noreferrer">
+            <input type="button" id="but" value="FAN科技">
         </a>
     </div>
 </body>
