新添内容：常见问题

--- a/index.html
+++ b/index.html
@@ -178,6 +178,10 @@
         <a href="./html/internet.html" target="_blank" rel="noopener noreferrer">
             <input type="button" id="but" value="网络问题">
         </a>
+
+        <a href="./html/daily.html" target="_blank" rel="noopener noreferrer">
+            <input type="button" id="but" value="常见问题">
+        </a>
     </div>
 
     <div id="up">
