新添内容：常见问题

--- a/html/daily.html
+++ b/html/daily.html
@@ -27,7 +27,7 @@
 
         <!-- The question start -->
         <h2>有必要更改电源选项吗？</h2>
-        <h3>没有无脑选高性能/卓越模式，其本质是让CPU锁频，对于游戏帧数的稳定性有帮助，但不能提高性能，玩网游（CSGO，吃鸡）等游戏的用户可以按情况打开，选择平衡模式即可，笔记本用户可选择厂商定制的电源模式</h3>
+        <h3>不要无脑选高性能/卓越模式，其本质是让CPU锁频，对于游戏帧数的稳定性有帮助，但不能提高性能，玩网游（CSGO，吃鸡）等游戏的用户可以按情况打开，选择平衡模式即可，笔记本用户可选择厂商定制的电源模式</h3>
         <!-- The question end -->
 
         <!-- The question start -->
