--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         </a>
 
         <a href="https://www.bilibili.com/video/BV1tD4y1Q795" target="_blank" rel="noopener noreferrer">
-            <input type="button" id="but4" value="内存科普教程[佳乐]">
+            <input type="button" id="but4" value="内存科普[佳乐]">
         </a>
     </div>
 
@@ -163,9 +163,7 @@
             <input type="button" id="but2" value="3DMark（Steam国内无法打开）">
         </a>
 
-        <div>
-            <h3>- 重装解决99%的问题，重买解决100%的问题</h3>
-        </div>
+        
     </div>
 
     <div id="faq">
@@ -182,6 +180,14 @@
         <a href="./html/daily.html" target="_blank" rel="noopener noreferrer">
             <input type="button" id="but" value="常见问题">
         </a>
+
+        <a href="./html/ieQuestions.html" target="_blank" rel="noopener noreferrer">
+            <input type="button" id="but" value="装机问题">
+        </a>
+
+        <div>
+            <h3>注：重装解决99%的问题，重买解决100%的问题</h3>
+        </div>
     </div>
 
     <div id="up">
