--- a/html/daily.html
+++ b/html/daily.html
@@ -48,7 +48,7 @@
         <!-- The question start -->
         <h2>有什么推荐的杀毒软件吗？</h2>
         <h3>国产：360，火绒，智量</h3>
-        <h3>国外：卡巴斯基</h3>
+        <h3>国外：卡巴斯基，小红伞</h3>
         <!-- The question end -->
 
         <!-- The question start -->
@@ -60,6 +60,13 @@
         <h2>如何关闭某些开机启动项？</h2>
         <h3>Windows键（徽标键） + R -> 运行 -> 输入“msconfig” -> 启动 -> 选择要关闭的启动项并关闭</h3>
         <!-- The question end -->
+
+        <!-- The question start -->
+        <h2>如何校准时间？</h2>
+        <h3>控制面板 -> 日期和时间 -> Internet时间 -> 更改设置 -> 立即更新 -> 确定</h3>
+        <!-- The question end -->
+
+        
     </div>
 </body>
 </html>
