Display Mode Switch

--- a/html/bulescreen.html
+++ b/html/bulescreen.html
@@ -1,57 +1,81 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>蓝屏</title>
     <link rel="stylesheet" href="../css/bs.css">
+    <script src="../js/displayModeSwitch.js"></script>
 </head>
+
 <body>
-    <h2>MACHINE-CHECK-EXCEPTION</h2>
-    <h3>原因：CPU过于超频</h3>
-    <h3>解决方法：启动自动动修复程序，修复系统错误后，将CPU降回出厂频率。不要再超频运行，最好不要用容量太大的软件或者是那些测试CPU超频之类的软件</h3>
+    <h2><a href="javascript:displayModeSwitch('MCE')">MACHINE-CHECK-EXCEPTION</a></h2>
+    <div id="MCE">
+        <h3>原因：CPU过于超频</h3>
+        <h3>解决方法：启动自动动修复程序，修复系统错误后，将CPU降回出厂频率。不要再超频运行，最好不要用容量太大的软件或者是那些测试CPU超频之类的软件</h3>
+    </div>
 
-    <h2>0X0000007E、0X0000008E</h2>
-    <h3>原因：一般多是病毒造成的、内存损坏或接触不良</h3>
-    <h3>解决方法：开机按F8进入安全模式，将系统进行杀毒，也可以尝试重新插拔内存，一般这代码内存损坏概率不大</h3>
+    <h2><a href="javascript:displayModeSwitch('XE')">0X0000007E、0X0000008E</a></h2>
+    <div id="XE">
+        <h3>原因：一般多是病毒造成的、内存损坏或接触不良</h3>
+        <h3>解决方法：开机按F8进入安全模式，将系统进行杀毒，也可以尝试重新插拔内存，一般这代码内存损坏概率不大</h3>
+    </div>
 
-    <h2>0X000000D1</h2>
-    <h3>原因：一般是和显卡有关，可能是显卡损坏了或者安装了不太兼容的显卡驱动造成的</h3>
-    <h3>解决方法：到官网下载一个显卡驱动安装试试。若还是不行，主机有集成显卡的，用集成显卡试一下，或者直接拔掉显卡</h3>
+    <h2><a href="javascript:displayModeSwitch('XD')">0X000000D1</a></h2>
+    <div id="XD">
+        <h3>原因：一般是和显卡有关，可能是显卡损坏了或者安装了不太兼容的显卡驱动造成的</h3>
+        <h3>解决方法：到官网下载一个显卡驱动安装试试。若还是不行，主机有集成显卡的，用集成显卡试一下，或者直接拔掉显卡</h3>
+    </div>
 
-    <h2>0x0000001A</h2>
-    <h3>原因：一些杂牌内存条发热导致</h3>
-    <h3>解决方法：换内存条能解决</h3>
-    <h3>排查：第一步：要排除硬件故障以及内存的故障，先从内存条出发，在确保内存没有损坏的情况下，将内存条拔下来擦拭一下，然后重新插上一般即可解决</h3>
-    <h3>第二步：如果是使用两条内存条的话可以尝试拔掉一条内存条试试看</h3>
-    <h3>第三步：如果还没有解决的话，就排查一下是否硬盘的故障，查看一下数据线是否出现问题，然后对硬盘进行格式化操作试试，另外如果是显卡损坏也可能导致</h3>
+    <h2><a href="javascript:displayModeSwitch('xA')">0x0000001A</a></h2>
+    <div id="xA">
+        <h3>原因：一些杂牌内存条发热导致</h3>
+        <h3>解决方法：换内存条能解决</h3>
+        <h3>排查：第一步：要排除硬件故障以及内存的故障，先从内存条出发，在确保内存没有损坏的情况下，将内存条拔下来擦拭一下，然后重新插上一般即可解决</h3>
+        <h3>第二步：如果是使用两条内存条的话可以尝试拔掉一条内存条试试看</h3>
+        <h3>第三步：如果还没有解决的话，就排查一下是否硬盘的故障，查看一下数据线是否出现问题，然后对硬盘进行格式化操作试试，另外如果是显卡损坏也可能导致</h3>
+    </div>
 
-    <h2>0x0000007B</h2>
-    <h3>原因：由于系统引导出错</h3>
-    <h3>解决方法：可以尝试更改硬盘模式, 或进PE里面修复系统引导</h3>
-    <h3>第一步：重启电脑，待出现开机画面后按快捷键F1、F2或Del键（不同电脑进入bios快捷键不一样，一般开机界面会有提示）进入到bios启动项设置界面，通过键盘上的左右方向键将光标移动到“Advanced”（对应中文：高级），然后再按上下方向键选择“SATA Configuration”（对应中文：SATA配置），按回车键确认</h3>
-    <h3>第二步：随后会弹出一个模式选择窗口，在这里我们通过上下方向键移动光标选择“AHCI”模式（如果本来就是AHCI模式，可尝试更改为IDE模式），接着按回车键执行即可</h3>
-    <h3>第三步：完成以上两步操作后，只需按F10键保存更改的设置。当电脑重启再次进入系统加载画面后，我们会发现系统已经不再显示蓝屏错误代码0x000007B了</h3>
+    <h2><a href="javascript:displayModeSwitch('xB')">0x0000007B</a></h2>
+    <div id="xB">
+        <h3>原因：由于系统引导出错</h3>
+        <h3>解决方法：可以尝试更改硬盘模式, 或进PE里面修复系统引导</h3>
+        <h3>第一步：重启电脑，待出现开机画面后按快捷键F1、F2或Del键（不同电脑进入bios快捷键不一样，一般开机界面会有提示）进入到bios启动项设置界面，通过键盘上的左右方向键将光标移动到“Advanced”（对应中文：高级），然后再按上下方向键选择“SATA
+            Configuration”（对应中文：SATA配置），按回车键确认</h3>
+        <h3>第二步：随后会弹出一个模式选择窗口，在这里我们通过上下方向键移动光标选择“AHCI”模式（如果本来就是AHCI模式，可尝试更改为IDE模式），接着按回车键执行即可</h3>
+        <h3>第三步：完成以上两步操作后，只需按F10键保存更改的设置。当电脑重启再次进入系统加载画面后，我们会发现系统已经不再显示蓝屏错误代码0x000007B了</h3>
+    </div>
 
 
-    <h2>0x0000000A</h2>
-    <h3>原因：电脑驱动出现冲突, 显卡和芯片组的问题偏多</h3>
-    <h3>解决办法：进入安全模式, 删除最近的更新和安装的显卡和主板驱动</h3>
-    <h3>第一步：返回到电脑的桌面界面，然后右键点击桌面的计算机图标，选择下滑菜单中的管理选项</h3>
-    <h3>第二步：在打开的计算机管理界面中，依次点击左侧窗口中的事件查看器-管理事件的摘要，确定出现错误的驱动程序是哪个，确定出现故障的驱动之后，手动将该驱动卸载掉就可以了。如果是电脑兼容性问题的话，咱们可以使用系统诊断工具进行检测，看看是否硬件和驱动程序与系统兼容的问题，之后重新对其兼容性进行设置即可</h3>
+    <h2><a href="javascript:displayModeSwitch('XA')">0x0000000A</a></h2>
+    <div id="XA">
+        <h3>原因：电脑驱动出现冲突, 显卡和芯片组的问题偏多</h3>
+        <h3>解决办法：进入安全模式, 删除最近的更新和安装的显卡和主板驱动</h3>
+        <h3>第一步：返回到电脑的桌面界面，然后右键点击桌面的计算机图标，选择下滑菜单中的管理选项</h3>
+        <h3>第二步：在打开的计算机管理界面中，依次点击左侧窗口中的事件查看器-管理事件的摘要，确定出现错误的驱动程序是哪个，确定出现故障的驱动之后，手动将该驱动卸载掉就可以了。如果是电脑兼容性问题的话，咱们可以使用系统诊断工具进行检测，看看是否硬件和驱动程序与系统兼容的问题，之后重新对其兼容性进行设置即可
+        </h3>
+    </div>
 
-    <h2>0x00000074</h2>
-    <h3>原因：表明注册表有错误。如果系统模块被破坏可能会发生这种错误。如果一些注册表的关键的键值缺失，这种错误也可能会发生。这可能是手工编辑注册表的结果</h3>
-    <h3>解决方法：（一）：启动时，按 F8 进入“启用调试”进行调试。系统关机，在开机时按 F8 键，进入高级启动界面，“疑难解答 > 高级选项 > 查看更多恢复选项 > 启动设置 > 重启”，然后页面会跳转到“启动设置”界面，按F1“启用调试”，系统以调试模式进入系统，然后可以进行调试</h3>
-    <h3>（二）：如无效，可尝试重新安装系统</h3>
+    <h2><a href="javascript:displayModeSwitch('x')">0x00000074</a></h2>
+    <div id="x">
+        <h3>原因：表明注册表有错误。如果系统模块被破坏可能会发生这种错误。如果一些注册表的关键的键值缺失，这种错误也可能会发生。这可能是手工编辑注册表的结果</h3>
+        <h3>解决方法：（一）：启动时，按 F8 进入“启用调试”进行调试。系统关机，在开机时按 F8 键，进入高级启动界面，“疑难解答 > 高级选项 > 查看更多恢复选项 > 启动设置 >
+            重启”，然后页面会跳转到“启动设置”界面，按F1“启用调试”，系统以调试模式进入系统，然后可以进行调试</h3>
+        <h3>（二）：如无效，可尝试重新安装系统</h3>
+    </div>
 
-    <h2>0X000000ED</h2>
-    <h3>原因：故障主要是和硬盘、系统于关。系统损坏的概率较大，硬盘真坏的概率比较小，有可能是卷有问题</h3>
-    <h3>解决方法：重装系统/更换硬盘</h3>
+    <h2><a href="javascript:displayModeSwitch('XED')">0X000000ED</a></h2>
+    <div id="XED">
+        <h3>原因：故障主要是和硬盘、系统于关。系统损坏的概率较大，硬盘真坏的概率比较小，有可能是卷有问题</h3>
+        <h3>解决方法：重装系统/更换硬盘</h3>
+    </div>
 
     <h2>----------------------------------------</h2>
 
-    <h4>原贴：</h4> <a target="_blank" href="https://blog.csdn.net/weixin_43187111/article/details/114012543">https://blog.csdn.net/weixin_43187111/article/details/114012543</a>
+    <h4>原贴：</h4> <a target="_blank"
+        href="https://blog.csdn.net/weixin_43187111/article/details/114012543">https://blog.csdn.net/weixin_43187111/article/details/114012543</a>
 </body>
+
 </html>
