--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         </a>
 
         <div>
-            <h3>注：重装解决99%的问题，重买解决100%的问题</h3>
+            <h3>注：重装解决99%的问题，重买解决100%的问题（bushi</h3>
         </div>
     </div>
 
