--- a/html/daily.html
+++ b/html/daily.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>常见问题</title>
     <link rel="stylesheet" href="../css/daily.css">
+    <script src="../js/displayModeSwitch.js"></script>
 </head>
+
 <body>
     <div id="main">
         <!-- The question start -->
@@ -14,59 +17,110 @@
 
         <!-- The question start -->
         <h2>如何显示文件扩展名？</h2>
-        <h3>Win7</h3>
-        <h3>开始 -> 文件夹选项 -> 查看 -> 隐藏已知文件扩展名 -> 关闭</h3>
-        <h3>Win10</h3>
-        <h3>此电脑 -> 查看 -> 文件扩展名 -> 开启</h3>
+        <div>
+            <input type="button" value="显示/隐藏" onclick="displayModeSwitch('file')">
+        </div>
+        <div id="file">
+            <h3>Win7</h3>
+            <h3>开始 -> 文件夹选项 -> 查看 -> 隐藏已知文件扩展名 -> 关闭</h3>
+            <h3>Win10</h3>
+            <h3>此电脑 -> 查看 -> 文件扩展名 -> 开启</h3>
+        </div>
         <!-- The question end -->
 
         <!-- The question start -->
         <h2>如何正确卸载软件？</h2>
-        <h3>控制面板 -> 程序和功能 -> 选择想卸载的软件并双击进入卸载程序</h3>
+        <div>
+            <input type="button" value="显示/隐藏" onclick="displayModeSwitch('uninstall')">
+        </div>
+        <div id="uninstall">
+            <h3>控制面板 -> 程序和功能 -> 选择想卸载的软件并双击进入卸载程序</h3>
+        </div>
         <!-- The question end -->
 
         <!-- The question start -->
         <h2>有必要更改电源选项吗？</h2>
-        <h3>不要无脑选高性能/卓越模式，其本质是让CPU锁频，对于游戏帧数的稳定性有帮助，但不能提高性能，玩网游（CSGO，吃鸡）等游戏的用户可以按情况打开，选择平衡模式即可，笔记本用户可选择厂商定制的电源模式</h3>
+        <div>
+            <input type="button" value="显示/隐藏" onclick="displayModeSwitch('W')">
+        </div>
+        <div id="W">
+            <h3>不要无脑选高性能/卓越模式，其本质是让CPU锁频，对于游戏帧数的稳定性有帮助，但不能提高性能，玩网游（CSGO，吃鸡）等游戏的用户可以按情况打开，选择平衡模式即可，笔记本用户可选择厂商定制的电源模式</h3>
+        </div>
         <!-- The question end -->
 
         <!-- The question start -->
         <h2>有必要更改N卡控制面板的模式吗？</h2>
-        <h3>没必要，NV的驱动功能较老，建议在游戏内设置</h3>
+        <div>
+            <input type="button" value="显示/隐藏" onclick="displayModeSwitch('NV')">
+        </div>
+        <div id="NV">
+            <h3>没必要，NV的驱动功能较老，建议在游戏内设置</h3>
+        </div>
         <!-- The question end -->
 
         <!-- The question start -->
         <h2>有必要更改虚拟内存吗？</h2>
-        <h3>没必要，其速度无法跟内存相比，只是用来存放活动数据，且系统默认会设置好</h3>
+        <div>
+            <input type="button" value="显示/隐藏" onclick="displayModeSwitch('vm')">
+        </div>
+        <div id="vm">
+            <h3>没必要，其速度无法跟内存相比，只是用来存放活动数据，且系统默认会设置好</h3>
+        </div>
         <!-- The question end -->
 
         <!-- The question start -->
         <h2>有必要安装杀毒软件吗？</h2>
-        <h3>如果是小白推荐安装360，火绒等杀毒软件，如果你具有辨别病毒的能力，可以选择不装</h3>
+        <div>
+            <input type="button" value="显示/隐藏" onclick="displayModeSwitch('safe')">
+        </div>
+        <div id="safe">
+            <h3>如果是小白推荐安装360，火绒等杀毒软件，如果你具有辨别病毒的能力，可以选择不装</h3>
+        </div>
         <!-- The question end -->
 
         <!-- The question start -->
         <h2>有什么推荐的杀毒软件吗？</h2>
-        <h3>国产：360，火绒，智量</h3>
-        <h3>国外：卡巴斯基，小红伞</h3>
+        <div>
+            <input type="button" value="显示/隐藏" onclick="displayModeSwitch('safeSoft')">
+        </div>
+        <div id="safeSoft">
+            <h3>国产：360，火绒，智量</h3>
+            <h3>国外：卡巴斯基，小红伞</h3>
+        </div>
         <!-- The question end -->
 
         <!-- The question start -->
         <h2>如何清理系统缓存？</h2>
-        <h3>Windows键（徽标键） + R -> 运行 -> 输入“%temp%” -> 进入缓存目录并将文件全部删除，如出现无法删除的请选择跳过</h3>
+        <div>
+            <input type="button" value="显示/隐藏" onclick="displayModeSwitch('temp')">
+        </div>
+        <div id="temp">
+            <h3>Windows键（徽标键） + R -> 运行 -> 输入“%temp%” -> 进入缓存目录并将文件全部删除，如出现无法删除的请选择跳过</h3>
+        </div>
         <!-- The question end -->
 
         <!-- The question start -->
         <h2>如何关闭某些开机启动项？</h2>
-        <h3>Windows键（徽标键） + R -> 运行 -> 输入“msconfig” -> 启动 -> 选择要关闭的启动项并关闭</h3>
+        <div>
+            <input type="button" value="显示/隐藏" onclick="displayModeSwitch('start')">
+        </div>
+        <div id="start">
+            <h3>Windows键（徽标键） + R -> 运行 -> 输入“msconfig” -> 启动 -> 选择要关闭的启动项并关闭</h3>
+        </div>
         <!-- The question end -->
 
         <!-- The question start -->
         <h2>如何校准时间？</h2>
-        <h3>控制面板 -> 日期和时间 -> Internet时间 -> 更改设置 -> 立即更新 -> 确定</h3>
+        <div>
+            <input type="button" value="显示/隐藏" onclick="displayModeSwitch('time')">
+        </div>
+        <div id="time">
+            <h3>控制面板 -> 日期和时间 -> Internet时间 -> 更改设置 -> 立即更新 -> 确定</h3>
+        </div>
         <!-- The question end -->
 
-        
+
     </div>
 </body>
+
 </html>
