--- a/html/ieQuestions.html
+++ b/html/ieQuestions.html
@@ -58,7 +58,7 @@
         <h4>- 常见主板大小分为ATX、M-ATX、ITX三种，家用一般选择M-AXT或者ITX即可</h4>
         <h4>- 购买时需查看主板的针脚数是否符合CPU的针脚数（英特尔的CPU针脚为LGAxxxxx，AMD的为AMx）</h4>
         <h4>- 英特尔主板一般十位上是6（如B560），而AMD的则为5,（如B550），英特尔的H,B,Z系列主板分别对标AMD的A,B,X系列主板</h4>
-        <h4>- 一般用户不需要M系列主板这么高的扩展</h4>
+        <h4>- 一般用户不需要HEDT平台这么高的扩展</h4>
         <h4>- 要看主板的供电是否能带动CPU的功耗</h4>
     </div>
 
