--- a/index.html
+++ b/index.html
@@ -113,7 +113,18 @@
             <a href="https://dm.weishi.360.cn/home.html?from=homepage" target="_blank">
                 <input type="button" id="but" value="360驱动">
             </a>
-        </div>
+
+            <a href="https://www.intel.cn/content/www/cn/zh/download-center/home.html" target="_blank" rel="noopener noreferrer">
+                <input type="button" id="but" value="Intel">
+            </a>
+
+            <a href="https://www.amd.com/zh-hans/support" target="_blank" rel="noopener noreferrer">
+                <input type="button" id="but" value="AMD">
+            </a>
+
+            <a href="https://www.nvidia.cn/geforce/drivers/" target="_blank" rel="noopener noreferrer">
+                <input type="button" id="but" value="Nvidia">
+            </a>
     </div>
 
     <div id="super">    
