--- a/html/ieQuestions.html
+++ b/html/ieQuestions.html
@@ -47,7 +47,8 @@
         <h4>- 不要购买过老的CPU和主板</h4>
         <h4>- 看核心和线程数，但并不是越多越好，最好选有超线程的CPU，即线程数 = 核心数 * 2</h4>
         <h4>- 如果你是打像CSGO、吃鸡这样的fps游戏，可选择频率更高的CPU</h4>
-        <h4>- 看制成工艺，不要选择过高的制成工艺，现在推荐购买<=14nm制成工艺的CPU</h4> <h4>- 带K的CPU，功耗（TDP），不等于峰值功耗</h4>
+        <h4>- 看制成工艺，不要选择过高的制成工艺，现在推荐购买<=14nm制成工艺的CPU</h4>
+        <h4>- 在选购CPU时应观看对应CPU的评测，TDP（散热设计功耗）不代表实际功耗</h4>
     </div>
 
     <h3>主板</h3>
@@ -60,6 +61,7 @@
         <h4>- 英特尔主板处Z系列主板十位上是6（如B560），而AMD的则为5,（如B550），英特尔的H,B,Z系列主板分别对标AMD的A,B,X系列主板</h4>
         <h4>- 一般用户不需要HEDT平台这么高的扩展</h4>
         <h4>- 要看主板的供电是否能带动CPU的功耗</h4>
+        <h4>- 购买主板时应确认该主板是否适合选择的CPU，否则会出现性能过剩/性能不足的情况</h4>
     </div>
 
     <h3>散热</h3>
@@ -91,7 +93,7 @@
         <h4>- 目前有两种硬盘供消费者选择：SATA，m.2</h4>
         <h4>- 购买m.2硬盘时需注意主板是否有m.2接口，如果主板没有m.2接口，但还是向要m.2硬盘可以购买pcie转接卡，但价格略高</h4>
         <h4>- 购买的m.2硬盘的PCI-E通道应与主板相符合，否则会出现性能过剩/性能不足的情况</h4>
-        <h4>- 购买SATA硬盘也应查看SATA接口的数字，否则会出现性能过剩/性能不足的情况</h4>
+        <h4>- 购买SATA硬盘也应查看SATA接口的版本号，否则会出现性能过剩/性能不足的情况</h4>
     </div>
 
     <h3>显卡</h3>
@@ -103,6 +105,7 @@
         <h4>- 购买时应先查看显卡的PCI-E通道是否符合主板以及CPU兼容的PCI-E通道，否则会出现性能过剩/性能不足的情况</h4>
         <h4>- Q：现在推荐购买30系显卡吗？ A：推荐购买锁算力版本</h4>
         <h4>- Q：推荐购买AMD的RX2/3xx系列显卡吗？ A：不推荐，因为这部分卡大多性能都跟不上现在的主流游戏，且含有大量矿卡</h4>
+        <h4>- 在选购显卡时应观看对应显卡的评测，TDP不代表实际功耗</h4>
     </div>
 
     <h3>电源</h3>
@@ -112,9 +115,9 @@
     <div id="W">
         <h4>- 不要选择杂牌电源，推荐购买长城、海盗船、爱国者、海韵等大牌电源</h4>
         <h4>- 建议购买全模组电源，理线会好看、简单许多</h4>
+        <h4>- 购买时应查看供电线是否对应显卡和主板的CPU供电接口，虽然CPU的8+4Pin供电接口只接8Pin供电也能正常使用，但是无法发挥CPU的全部性能，显卡同理</h4>
         <h4>- Q：如何选择电源功率？ A：首先查看显卡的推荐电源，如果CPU选择的是不带K的CPU一般选择500~650W即可</h4>
         <h4>- Q：如何选择电源的铜/银/金牌？ A：一般选择铜/银牌即可</h4>
-
     </div>
 
     <h3>机箱</h3>
