--- a/index.html
+++ b/index.html
@@ -72,6 +72,16 @@
     <div id="system">
         <div id="install">
             <h2>系统安装</h2>
+            <h3>- 启动</h3>
+            
+            <a href="./html/fastboot.html" target="_blank">
+                <input type="button" value="快捷启动" id="but">
+            </a>
+
+            <a href="https://www.ventoy.net/cn/" target="_blank">
+                <input type="button" value="Ventoy（启动IOS文件）" id="but2">
+            </a>
+
             <h3>- PE</h3>
 
             <a href="http://www.uqitong.com/" target="_blank">
@@ -80,6 +90,10 @@
 
             <a href="http://www.wepe.cn/" target="_blank" rel="noopener noreferrer">
                 <input type="button" id="but" value="微PE">
+            </a>
+
+            <a href="https://firpe.cn/page-247" target="_blank">
+                <input type="button" value="FirePE" id="but">
             </a>
 
             <h3>- 系统下载</h3>
