Added Notebook Module

--- a/index.html
+++ b/index.html
@@ -209,6 +209,10 @@
         <a href="./html/ieQuestions.html" target="_blank" rel="noopener noreferrer">
             <input type="button" id="but" value="装机问题">
         </a>
+		
+		<a href="./html/notebook.html" target="_blank" rel="noopener noreferrer">
+			<input type="button" value="笔电问题" id="but">
+		</a>
 
         <div>
             <h3>注：重装解决99%的问题，重买解决100%的问题（bushi</h3>
