--- a/html/notebook.html
+++ b/html/notebook.html
@@ -3,6 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>笔电问题</title>
 </head>
 <script src="../js/displayModeSwitch.js" type="text/javascript" charset="utf-8"></script>
