--- a/html/ieQuestions.html
+++ b/html/ieQuestions.html
@@ -12,7 +12,7 @@
 
 <body>
     <!-- The question start -->
-    <h2>为什么不推荐购买淘宝整机？</h2>
+    <h2>为什么不推荐购买淘宝整机/电脑城整机？</h2>
     <div>
         <input type="button" value="显示/隐藏" onclick="displayModeSwitch('tb')">
     </div>
@@ -20,6 +20,8 @@
         <h3>并非所有淘宝整机都是坏的，只不过有许多奸商会打着小白不懂电脑来卖一些“i7级”的电脑，实际上的“i7级”并非你想的那个i7，而是E3系列的洋垃圾或者是一代i7</h3>
         <h3>并且，某些淘宝整机的电源也有安全隐患，轻则烧坏电源、主机，重则着火、爆炸</h3>
         <h3>有一些整机店铺会卖给你真的配件，但大多数都不会写明品牌、型号等，等收到货会发现内存、硬盘等配件可能是三线甚至连三线都不如的品牌，或者是某些十分丐的“电商特供版”</h3>
+        <h3>最好也不要在电脑城购买笔记本，因为现在大多数笔记本的内存、银盘、网卡等都支持拆装，某些电脑城店铺可能会将原来的配件更换为廉价配件，但大部分客户并不会检测这些配件而被电脑城的奸商钻了空子</h3>
+        <h3>关于电脑城整机的问题可以查看<a href="https://www.bilibili.com/video/BV1FW4y187To" target="_blank" style="color: blue;">本期视频</a></h3>
     </div>
     <!-- The question end -->
 
