--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     <h1 style="color: rgb(255, 0, 0);">唯一网站：geji.eu.org</h1>
     <h1 style="color: rgb(255, 0, 0);">有新的问题可联系本人收录</h1>
 
+    <div id="news">
+        <h2>硬件新闻</h2>
+        <a href="./html/news.html" target="_blank">
+            <input type="button" value="硬件新闻" id="but">
+        </a>
+    </div>
+
     <div id="knows">
         <h2>科普</h2>
 
@@ -74,7 +81,7 @@
             <h2>系统安装</h2>
             <h3>- 启动</h3>
             
-            <a href="./html/fastboot.html" target="_blank">
+            <a href="./img/FastBoot.jpg" target="_blank">
                 <input type="button" value="快捷启动" id="but">
             </a>
 
