--- a/html/daily.html
+++ b/html/daily.html
@@ -16,6 +16,36 @@
         <!-- The question end -->
 
         <!-- The question start -->
+        <h2>如何修改屏幕分辨率？</h2>
+        <div>
+            <input type="button" value="显示/隐藏" onclick="displayModeSwitch('px')">
+        </div>
+        <div id="px">
+            <h3>桌面空白处邮件 -> 打开屏幕分辨率 -> 修改合适的分辨率即可</h3>
+        </div>
+        <!-- The question end -->
+
+        <!-- The question start -->
+        <h2>在桌面右键空白刷新有什么用？</h2>
+        <div>
+            <input type="button" value="显示/隐藏" onclick="displayModeSwitch('fresh')">
+        </div>
+        <div id="fresh">
+            <h3>刷新的本意是更新桌面的图标，但许多人认为其具有提升性能的作用，实则不然</h3>
+        </div>
+        <!-- The question end -->
+
+        <!-- The question start -->
+        <h2>如何避免捆绑软件？</h2>
+        <div>
+            <input type="button" value="显示/隐藏" onclick="displayModeSwitch('fuckingSoft')">
+        </div>
+        <div id="fuckingSoft">
+            <h3>下载软件最好在官网下载，如果非要在官网外下载，请在下载界面是不要点击“极速下载”等字样的下载按钮，应点击“本地下载”，这样可以最大程度避免下载到垃圾软件</h3>
+        </div>
+        <!-- The question end -->
+
+        <!-- The question start -->
         <h2>如何显示文件扩展名？</h2>
         <div>
             <input type="button" value="显示/隐藏" onclick="displayModeSwitch('file')">
@@ -119,7 +149,25 @@
         </div>
         <!-- The question end -->
 
+        <!-- The question start -->
+        <h2>如何为电脑设置密码/添加账户？</h2>
+        <div>
+            <input type="button" value="显示/隐藏" onclick="displayModeSwitch('pass')">
+        </div>
+        <div id="pass">
+            <h3>控制面板 -> 用户账户 -> 为您的账户设置密码/管理账户 -> 创建一个新账户</h3>
+        </div>
+        <!-- The question end -->
 
+        <!-- The question start -->
+        <h2>如何开启硬盘锁（BitLocker）</h2>
+        <div>
+            <input type="button" value="显示/隐藏" onclick="displayModeSwitch('BL')">
+        </div>
+        <div id="BL">
+            <h3>控制面板 -> BitLocker 驱动器加密 -> 选择要开启的硬盘并开启即可</h3>
+        </div>
+        <!-- The question end -->
     </div>
 </body>
 
