--- a/html/notebook.html
+++ b/html/notebook.html
@@ -28,6 +28,7 @@
 	<div style="display: none;" id="choose">
 		<h4>- 如果轻薄大于性能可以选择轻薄本，如果想要轻薄但也想要一点性能之类的可以选择商务本</h4>
 		<h4>- 如果想要一味的选择高性能，并且不经常带着笔电外出，可以选择游戏本</h4>
+		<h4>- 如果需要高性能且需要经常外出，可以选择较为轻薄的游戏本</h4>
 		<h4>- 购买前可以去看一下相关评测</h4>
 		<h4>
 			常见的笔电CPU后缀：<br>
