--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <h1 style="color: rgb(255, 0, 0);">唯一网站：geji.eu.org</h1>
+    <div id="QRCode">
+        <img src="./img/QRCode.png" alt="">
+    </div>
     <h1 style="color: rgb(255, 0, 0);">有新的问题可联系本人收录</h1>
 
     <div id="news">
