--- a/html/ieQuestions.html
+++ b/html/ieQuestions.html
@@ -60,7 +60,7 @@
     <div id="zhuban">
         <h4>- 常见主板大小分为ATX、M-ATX、ITX三种，家用一般选择M-AXT或者ITX即可</h4>
         <h4>- 购买时需查看主板的针脚数是否符合CPU的针脚数（英特尔的CPU针脚为LGAxxxxx，AMD的为AMx）</h4>
-        <h4>- 英特尔主板处Z系列主板十位上是6（如B560），而AMD的则为5,（如B550），英特尔的H,B,Z系列主板分别对标AMD的A,B,X系列主板</h4>
+        <h4>- 英特尔主板一般H系列主板的十位是1（如H610），B系列主板十位上是6（如B560），Z系列主板的十位为9（如Z690）；而AMD的则为2,5,7。英特尔的H,B,Z系列主板分别对标AMD的A,B,X系列主板</h4>
         <h4>- 一般用户不需要HEDT平台这么高的扩展</h4>
         <h4>- 要看主板的供电是否能带动CPU的功耗</h4>
         <h4>- 购买主板时应确认该主板是否适合选择的CPU，否则会出现性能过剩/性能不足的情况</h4>
