--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 <input type="button" id="but" value="AMD">
             </a>
 
-            <a href="https://www.nvidia.cn/geforce/drivers/" target="_blank" rel="noopener noreferrer">
+            <a href="https://www.nvidia.com/Download/index.aspx?lang=en-us" target="_blank" rel="noopener noreferrer">
                 <input type="button" id="but" value="Nvidia">
             </a>
     </div>
